# deckard

./: .gitignore  Cargo.toml  README.md
benches/: index.rs  process.rs
benchmarks/: benchmark.sh  benchmark_audio.sh  benchmark_images.sh  benchmark_threads.sh  benchmark_version.sh  du.sh  dust.sh  fclones.sh  fclones_full.sh  heaptrack.sh
deckard/: Cargo.toml
deckard-cli/: Cargo.toml
deckard-cli/src/: cli.rs  main.rs
deckard-cli/tests/: cli.rs
deckard-tui/: Cargo.toml
deckard-tui/src/: app.rs  cli.rs  command.rs  constants.rs  dirtable.rs  main.rs  table.rs  tree.rs  tui.rs
deckard/benches/: compare.rs  images.rs  index.rs  process.rs
deckard/src/: cli.rs  config.rs  error.rs  file.rs  hasher.rs  index.rs  lib.rs
src/: cli.rs  file.rs  files.rs  index.rs  lib.rs  main.rs
test_files/: big_files.sh  symlink
test_files/.hidden_dir/: .hidden_b  hidden_c
test_files/false_positive/: end  mid  start
test_files/folder/: another.txt
test_files/images/same/: Lisa.heic  Lisa.jp2
test_files/images/testfile/: testfile.tiff
test_files/same_files/: text_file_1
test_files/similar_files/: file_b.txt  file_c.txt
