[package]
name = "clone-hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = "0.15"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
colored = "2"
chksum = "0.3.0"
tokio = { version = "1", features = ["full"] }
tree_magic_mini = "3.1.5"
tree_magic = "0.2.3"
