[package]
name = "deckard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
colored = "2"
chksum = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
infer = "0.15"
tree_magic_mini = "3.1"
tree_magic = "0.2"
mime_guess = "2.0"
log = "0.4"

rayon = "1.10"

env_logger = "0.11"
image_hasher = "2.0.0"
imagehash = "0.3.0"
image = "0.25.1"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "process"
harness = false

[[bench]]
name = "index"
harness = false

[[bin]]
name = "deckard"
