[package]
name = "deckard-cli"
version = "0.1.0"
edition = "2024"
authors = ["Tomash Ghz <ghz.tomash@hotmail.com>"]
description = "Duplicate file finder and disk usage CLI"
repository = "https://github.com/ghztomash/deckard"
keywords = ["duplicate", "dupe", "cleaner", "disk", "disk-usage"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
deckard = { path = "../deckard" }
color-eyre.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
humansize.workspace = true

colored = "3.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
