[package]
name = "deckard-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
deckard = { path = "../deckard" }
color-eyre.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true

crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.29"
trash = "5.2"
open = "5.3"
humansize = "2.1"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
