[package]
name = "deckard-tui"
version = "0.1.0"
edition = "2024"
authors = ["Tomash Ghz <ghz.tomash@hotmail.com>"]
description = "Duplicate file finder and disk usage TUI"
repository = "https://github.com/ghztomash/deckard"
keywords = ["duplicate", "dupe", "cleaner", "disk", "disk-usage"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
deckard = { path = "../deckard" }
color-eyre.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
open.workspace = true
humansize.workspace = true

crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.29"
trash = "5.2"
chrono = "0.4"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing-appender = "0.2"
arboard = { version = "3.6", features = [] }

[dev-dependencies]
pretty_assertions = "1.4"
