[package]
name = "deckard"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
clap.workspace = true
open.workspace = true

chksum = "0.4"
base64 = "0.22"
infer = "0.19"
tree_magic_mini = "3.1"
tree_magic = "0.2"
mime_guess = "2.0"
thiserror = "2.0"

confy = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
jwalk = "0.8"

image_hasher = "3.0"
image = "0.25"

symphonia = { version = "0.5", features = ["mp3", "aac", "opt-simd"] }
rusty-chromaprint = "0.3"
common-path = "1.0"
pathdiff = "0.2"

dashmap = "6.1"
lofty = "0.22"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "process"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "images"
harness = false

[[bench]]
name = "compare"
harness = false
